[project]
name = "genkit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "prawncrown", email = "38025852+prawncrown@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.37.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genkit"]
